--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,16 +23,18 @@ collections:
       - { label: "Architect", name: "architect", widget: "string" }
       - { label: "Type", name: "type", widget: "string" }
       - { label: "Description", name: "body", widget: "markdown" }
-      - {
-          label: "Images",
-          name: "images",
-          widget: "list",
-          field: { label: "Image", name: "image", widget: "image" }
-        }
-      - {
-          label: "Plans",
-          name: "plans",
-          widget: "list",
-          field: { label: "Plan", name: "plan", widget: "image" }
-        }
+      - label: "Images"
+        name: "images"
+        widget: "list"
+        field:
+          label: "Image"
+          name: "image"
+          widget: "image"
+      - label: "Plans"
+        name: "plans"
+        widget: "list"
+        field:
+          label: "Plan"
+          name: "plan"
+          widget: "image"
       - { label: "Layout", name: "layout", widget: "hidden", default: "project.njk" }
