--- a/admin/config.yml
+++ b/admin/config.yml
@@ -17,12 +17,24 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Year", name: "year", widget: "number" }
-      - { label: "Location", name: "location", widget: "string" }
-      - { label: "Architect", name: "architect", widget: "string" }
-      - { label: "Type", name: "type", widget: "string" }
-      - { label: "Description", name: "body", widget: "markdown" }
+      - label: "Title"
+        name: "title"
+        widget: "string"
+      - label: "Year"
+        name: "year"
+        widget: "number"
+      - label: "Location"
+        name: "location"
+        widget: "string"
+      - label: "Architect"
+        name: "architect"
+        widget: "string"
+      - label: "Type"
+        name: "type"
+        widget: "string"
+      - label: "Description"
+        name: "body"
+        widget: "markdown"
       - label: "Images"
         name: "images"
         widget: "list"
@@ -37,4 +49,7 @@ collections:
           label: "Plan"
           name: "plan"
           widget: "image"
-      - { label: "Layout", name: "layout", widget: "hidden", default: "project.njk" }
+      - label: "Layout"
+        name: "layout"
+        widget: "hidden"
+        default: "project.njk"
