--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "eleventy"
   publish = "_site"
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/admin/callback"
