trying cms again30

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,7 @@
 backend:
-  name: github
-  repo: alifiratuzun/abakus
+  name: git-gateway
   branch: main
-  base_url: https://abakus-studio.netlify.app
-  auth_endpoint: /.netlify/functions/auth
+
 
 media_folder: "img"
 public_folder: "/img"
