trying cms again39

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,9 @@
   from = "/admin/*"
   to = "/admin/index.html"
   status = 200
+
+  [[redirects]]
+  from = "/#invite_token=:token"
+  to = "/admin/#invite_token=:token"
+  status = 301
+  force = true
