--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,10 +19,11 @@ collections:
     slug: "{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "What (Type)", name: "what", widget: "string", required: true, hint: "e.g. Museum, Housing, Cultural, etc." }
-      - { label: "Who (Architect)", name: "who", widget: "string", required: true, hint: "e.g. Norman Foster, Zaha Hadid, etc." }
-      - { label: "Where (Location)", name: "where", widget: "string", required: true, hint: "e.g. Berlin, Istanbul, Porto, etc." }
-      - { label: "When (Year)", name: "when", widget: "string", required: true, hint: "e.g. 2022, 2023, 2024, etc." }
+      - { label: "What (Type)", name: "what", widget: "string", required: true, hint: "e.g. Housing" }
+      - { label: "Who (Architect)", name: "who", widget: "string", required: true, hint: "e.g. Mimar Sinan" }
+      - { label: "Where (Location)", name: "where", widget: "string", required: true, hint: "e.g. Istanbul" }
+      - { label: "When (Year)", name: "when", widget: "string", required: true, hint: "e.g. 2022" }
       - { label: "Images", name: "images", widget: "list", required: false, hint: "Add image paths" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Footnote", name: "footnote", widget: "markdown", required: false, hint: "Add sources or credits for images/texts. This will appear as a small footnote at the bottom of the project page." }
       - { label: "Layout", name: "layout", widget: "hidden", default: "project.njk" }
