--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,10 +19,10 @@ collections:
     slug: "{{slug}}"
     fields:
       - { label: "Proje Adı", name: "title", widget: "string" }
-      - { label: "Ne", name: "Ne", widget: "string", required: true, hint: "Türü (ör: Dini, Endüstriyel, Eğitim)" }
-      - { label: "Kim", name: "Kim", widget: "string", required: true, hint: "Mimar(lar)" }
-      - { label: "Nerede", name: "Nerede", widget: "string", required: true, hint: "Yer (ör: Ankara, Türkiye)" }
-      - { label: "Ne Zaman", name: "Ne Zaman", widget: "string", required: true, hint: "Yıl (ör: 2022)" }
+      - { label: "Tür", name: "Tur", widget: "string", required: true, hint: "Türü (ör: Dini, Endüstriyel, Eğitim)" }
+      - { label: "Mimar", name: "Mimar", widget: "string", required: true, hint: "Mimar(lar)" }
+      - { label: "Yer", name: "Yer", widget: "string", required: true, hint: "Yer (ör: Ankara, Türkiye)" }
+      - { label: "Tarih", name: "Tarih", widget: "string", required: true, hint: "Yıl (ör: 2022)" }
       - label: "Görseller"
         name: "images"
         widget: "list"
