--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,16 +23,38 @@ collections:
       - { label: "Yer", name: "Yer", widget: "string", required: true, hint: "Yer (ör: Ankara, Türkiye)" }
       - { label: "Tür", name: "Tur", widget: "string", required: true, hint: "Türü (ör: Dini, Endüstriyel, Eğitim)" }
       - { label: "Tarih", name: "Tarih", widget: "string", required: true, hint: "Yıl (ör: 2022)" }
-      - label: "Görseller"
+      - label: "Kapak Görseli"
+        name: "cover_image"
+        widget: "object"
+        required: true
+        fields:
+          - { label: "Görsel", name: "image", widget: "image", required: true }
+          - { label: "Alt Metin", name: "alt", widget: "string", required: false }
+      - label: "Galeri (Opsiyonel)"
         name: "images"
         widget: "list"
-        required: true
-        default:
-          - image: "/img/placeholder.jpg"
-            alt: "Placeholder image"
+        required: false
         fields:
           - { label: "Görsel", name: "image", widget: "image", required: true }
           - { label: "Alt Metin", name: "alt", widget: "string", required: false, hint: "Erişilebilirlik için görsel açıklaması" }
+      - label: "İçerik Blokları"
+        name: "content_blocks"
+        widget: "list"
+        required: false
+        collapsed: false
+        types:
+          - label: "Metin"
+            name: "text"
+            widget: "object"
+            fields:
+              - { label: "Metin", name: "body", widget: "markdown" }
+          - label: "Görsel"
+            name: "image"
+            widget: "object"
+            fields:
+              - { label: "Görsel", name: "image", widget: "image", required: true }
+              - { label: "Alt Metin", name: "alt", widget: "string", required: false }
+              - { label: "Açıklama", name: "caption", widget: "string", required: false }
       - { label: "Açıklama", name: "body", widget: "markdown" }
       - { label: "Dipnot", name: "footnote", widget: "markdown", required: false, hint: "Kaynaklar veya ek bilgiler. Her satır yeni bir referans." }
       - { label: "Layout", name: "layout", widget: "hidden", default: "project.njk" }
