--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,12 @@
 [build]
   command = "eleventy"
   publish = "_site"
+
+[[redirects]]
+  from = "/admin"
+  to = "/cms/"
+  status = 302
+[[redirects]]
+  from = "/admin/"
+  to = "/cms/"
+  status = 302
