--- a/netlify.toml
+++ b/netlify.toml
@@ -6,4 +6,5 @@
   directory = "netlify/functions"
 
 [build.environment]
+  NODE_VERSION = "20.11.1"
   SECRETS_SCAN_OMIT_KEYS = "SANITY_PROJECT_ID,SANITY_DATASET"
